对代码进行重构，使图表能够直接在网页中显示；新增一个类，增添了必要的注释；删去不必要的文件。

--- a/IKUN在中国的分布热力图.html
+++ b/IKUN在中国的分布热力图.html
@@ -8,11 +8,11 @@
 
 </head>
 <body >
-    <div id="2649a16d0b2f4ca3ac79f2c6b562cac1" class="chart-container" style="width:1200px; height:550px; "></div>
+    <div id="906ee6b0fb5849f1afef6e42a30f0d2c" class="chart-container" style="width:1200px; height:550px; "></div>
     <script>
-        var chart_2649a16d0b2f4ca3ac79f2c6b562cac1 = echarts.init(
-            document.getElementById('2649a16d0b2f4ca3ac79f2c6b562cac1'), 'dark', {renderer: 'canvas'});
-        var option_2649a16d0b2f4ca3ac79f2c6b562cac1 = {
+        var chart_906ee6b0fb5849f1afef6e42a30f0d2c = echarts.init(
+            document.getElementById('906ee6b0fb5849f1afef6e42a30f0d2c'), 'dark', {renderer: 'canvas'});
+        var option_906ee6b0fb5849f1afef6e42a30f0d2c = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -363,7 +363,7 @@
     "title": [
         {
             "show": true,
-            "text": "IKN\u5728\u4e2d\u56fd\u7684\u5206\u5e03\u70ed\u529b\u56fe",
+            "text": "IKUN\u5728\u4e2d\u56fd\u7684\u5206\u5e03\u70ed\u529b\u56fe",
             "target": "blank",
             "subtarget": "blank",
             "padding": 5,
@@ -405,7 +405,7 @@
         "emphasis": {}
     }
 };
-        chart_2649a16d0b2f4ca3ac79f2c6b562cac1.setOption(option_2649a16d0b2f4ca3ac79f2c6b562cac1);
+        chart_906ee6b0fb5849f1afef6e42a30f0d2c.setOption(option_906ee6b0fb5849f1afef6e42a30f0d2c);
     </script>
 </body>
 </html>
